<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.phono.captionstar.presentation.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/feedFragment"
        android:name="com.phono.captionstar.presentation.feed.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.phono.captionstar.presentation.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>