<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingHorizontal="24dp"
    android:paddingVertical="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/feed_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="231dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/feed_image"
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:contentDescription="@string/feed"
                android:scaleType="centerCrop"
                android:src="@drawable/birth_day" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/feed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/feed_image"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:minHeight="42dp"
                android:text="@string/feed_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/feed_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/feed_title"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/feed_date"
                android:textSize="12sp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>