<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingHorizontal="24dp"
    android:paddingVertical="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="147dp"
        android:padding="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:minHeight="60dp"
                android:text="@string/dummy_text" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/caption"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/primary_color" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:alpha="0.6"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/share"
                android:focusable="true"
                android:src="@drawable/ic_share" />

            <ImageView
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/share"
                android:alpha="0.6"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/copy"
                android:focusable="true"
                android:src="@drawable/ic_copy" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>