<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.onboarding.screens.FirstScreenFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_first_screen_on_boarding"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/onboarding_first_screen_title"
        android:textSize="@dimen/onboarding_title"
        android:textColor="@color/dark_black"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/onboarding_first_screen_desc"
        android:textColor="@color/dark_black_60"
        android:textSize="@dimen/onboarding_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="70dp"-->
<!--        android:weightSum="2"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_marginHorizontal="12dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_marginBottom="50dp">-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btn_skip"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="@dimen/onboarding_button_height"-->
<!--            android:text="@string/skip"-->
<!--            android:textAllCaps="false"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginHorizontal="12dp"-->
<!--            android:textColor="#392A17"-->
<!--            app:backgroundTint="@color/white"-->
<!--            app:cornerRadius="50dp" />-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btn_next"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="@dimen/onboarding_button_height"-->
<!--            android:text="@string/next"-->
<!--            android:textAllCaps="false"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginHorizontal="12dp"-->
<!--            android:textColor="@color/white"-->
<!--            app:backgroundTint="@color/btn_color"-->
<!--            app:cornerRadius="50dp" />-->

<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>